tests/checker/ok/product_field_access.can
Birthday = String

User = Birthday * Username

Username = String

Unit => Program {
    Birthday("1990") -> User(Username("alice")).Username -> Print
}
